--- a/Flash Chat iOS13/Views/MessageCell.xib
+++ b/Flash Chat iOS13/Views/MessageCell.xib
@@ -21,11 +21,18 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ggN-OO-LAp">
                         <rect key="frame" x="10" y="10" width="318" height="52"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="YouAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="vaB-hK-vZu">
+                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="kiR-I5-CJE"/>
+                                    <constraint firstAttribute="width" constant="40" id="ok9-q1-Pwj"/>
+                                </constraints>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="quw-EE-Trq">
-                                <rect key="frame" x="0.0" y="0.0" width="258" height="52"/>
+                                <rect key="frame" x="60" y="0.0" width="198" height="52"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label sdfafdf    djf;ldja;djf  daadfdafdadf " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NuN-wr-4Uk">
-                                        <rect key="frame" x="10" y="10" width="238" height="32"/>
+                                        <rect key="frame" x="10" y="10" width="178" height="32"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="BrandLightPurple"/>
                                         <nil key="highlightedColor"/>
@@ -59,6 +66,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="label" destination="NuN-wr-4Uk" id="6RE-W9-4bu"/>
+                <outlet property="leftImageView" destination="vaB-hK-vZu" id="3XK-21-Zqk"/>
                 <outlet property="messageBubble" destination="quw-EE-Trq" id="qUF-Nc-wlB"/>
                 <outlet property="rightImageView" destination="9VQ-wy-t6h" id="CQh-6D-37H"/>
             </connections>
@@ -67,6 +75,7 @@
     </objects>
     <resources>
         <image name="MeAvatar" width="36" height="36"/>
+        <image name="YouAvatar" width="36" height="36"/>
         <namedColor name="BrandLightPurple">
             <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
